--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
       <h1 class="project-name">Jacob</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/Jacob-Marshall/jacob" class="btn">View on GitHub</a>
-      <a href="https://github.com/Jacob-Marshall/jacob/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/Jacob-Marshall/jacob/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Jacob</h3>
+<p>I'm Jacob and I'm a developer who loves nuxtjs. I work for myself and my company, Desica. I've been working on design guidelines at <a href="https://desikit.vercel.app">desikit</a>. A massive thank you to the folks at js.org for providing this domain.</p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
