--- a/index.html
+++ b/index.html
@@ -14,24 +14,17 @@
       <h1 class="project-name">Jacob</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/Jacob-Marshall/jacob" class="btn">View on GitHub</a>
+      <a href="https://github.com/Jacob-Marshall/jacob/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/Jacob-Marshall/jacob/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Jacob</h3>
+      <h2>
+<a id="hi-im-jacob" class="anchor" href="#hi-im-jacob" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Jacob</h2>
 <p>I'm Jacob and I'm a developer who loves nuxtjs. I work for myself and my company, Desica. I've been working on design guidelines at <a href="https://desikit.vercel.app">desikit</a>. A massive thank you to the folks at js.org for providing this domain.</p>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/defunkt/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/defunkt">@defunkt</a>), PJ Hyett (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/pjhyett/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/pjhyett">@pjhyett</a>), and Tom Preston-Werner (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/mojombo/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/mojombo">@mojombo</a>) founded GitHub.</p>
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<a id="my-projects" class="anchor" href="#my-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My projects</h3>
+<p>I'm currently in the process of moving my projects over to this repo. When I'm done, links will appear here.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Jacob-Marshall/jacob">Jacob</a> is maintained by <a href="https://github.com/Jacob-Marshall">Jacob-Marshall</a>.</span>
