Make green less vibrant

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         margin: 16px 0 12px;
       }
       #message h2 {
-        color: #20FC8F;
+        color: #03C966;
         font-weight: bold;
         font-size: 16px;
         margin: 0 0 8px;
@@ -51,7 +51,7 @@
       #message a {
         display: block;
         text-align: center;
-        background: #20FC8F;
+        background: #03C966;
         text-transform: uppercase;
         text-decoration: none;
         color: white;
@@ -96,7 +96,7 @@
           box-shadow: none;
         }
         body {
-          border-top: 16px solid #20FC8F;
+          border-top: 16px solid #03C966;
         }
       }
     </style>
